<resources>
    <string name="app_name">TTQH HCM</string>
    <string name="title_activity_maps">Bản đồ quy hoạch</string>
    <string name="header_main_instruction">Bản đồ trực tuyến</string>
    <string name="access_token">pk.eyJ1IjoidHRxaGhjbSIsImEiOiJjajd6dnhqYmc2YnE0MnFwa2NxMHY2eG9mIn0.dOaZg1xI6C3ECh7QesZ8UA</string>
    <string name="nenBanDoVaScan">mapbox://styles/ttqhhcm/cj7zwlqoc77rj2sry51zbnubu</string>
    <string name="nenBanDoVaSo">mapbox://styles/ttqhhcm/cj97zlef811zv2rqdv27zrqch</string>
    <string name="nenVeTinhVaScan">mapbox://styles/ttqhhcm/cj7zwwpd077p22rqeudwleidw</string>
    <string name="nenVeTinhVaSo">mapbox://styles/ttqhhcm/cj97zo06v12qa2rmo9oxc74st</string>
    <string name="qhpk_crop_url">https://thongtinquyhoach.hochiminhcity.gov.vn/api/tiles/qhpk_crop/</string>
    <string name="qhpk_full_url">https://thongtinquyhoach.hochiminhcity.gov.vn/api/tiles/qhpk_full/</string>
    <string name="dccb_crop_url">https://thongtinquyhoach.hochiminhcity.gov.vn/api/tiles/dccb_crop/</string>
    <string name="dccb_full_url">https://thongtinquyhoach.hochiminhcity.gov.vn/api/tiles/dccb_full/</string>
    <string name="download_pdf_url">https://sqhkt-qlqh.tphcm.gov.vn/api/thua-dat/</string>
    <string name="download_pdf_url_new">https://thongtinquyhoach.hochiminhcity.gov.vn/api/thua-dat/</string>
    <string name="guide_pdf_url">https://thongtinquyhoach.hochiminhcity.gov.vn/files/huong-dan-su-dung.pdf</string>
    <string name="coordinate_sample_url">https://thongtinquyhoach.hochiminhcity.gov.vn/files/ttqh_hcm__toa-do-mau.txt</string>
    <string name="maptype_prompt">Loại bản đồ</string>
    <string-array name="maptype_arrays">
        <item>Nền thửa đất</item>
        <item>Nền bản đồ</item>
        <item>Nền không ảnh</item>
    </string-array>
    <string name="district_prompt">Quận/Huyện</string>
    <string-array name="district_arrays">
        <item>Quận 1</item>
        <item>Quận 2</item>
        <item>Quận 3</item>
        <item>Quận 4</item>
        <item>Quận 5</item>
        <item>Quận 6</item>
        <item>Quận 7</item>
        <item>Quận 8</item>
        <item>Quận 9</item>
        <item>Quận 10</item>
        <item>Quận 11</item>
        <item>Quận 12</item>
        <item>Quận Bình Tân</item>
        <item>Quận Bình Thạnh</item>
        <item>Quận Gò Vấp</item>
        <item>Quận Phú Nhuận</item>
        <item>Quận Tân Bình</item>
        <item>Quận Tân Phú</item>
        <item>Quận Thủ Đức</item>
        <item>Huyện Bình Chánh</item>
        <item>Huyện Cần Giờ</item>
        <item>Huyện Củ Chi</item>
        <item>Huyện Hóc Môn</item>
        <item>Huyện Nhà Bè</item>
        <item>Khu đô thị mới Thủ Thiêm</item>
        <item>Khu đô thị du lịch biển Cần Giờ 2780 ha</item>
        <item>Đồ án khu dân cư phường Tân Hưng</item>
    </string-array>
    <string-array name="district_Quan1_townId_arrays">
        <item>26740</item>
        <item>26743</item>
        <item>26761</item>
        <item>26752</item>
        <item>26755</item>
        <item>26737</item>
        <item>26758</item>
        <item>26746</item>
        <item>26749</item>
        <item>26734</item>
    </string-array>
    <string-array name="district_Quan2_townId_arrays">
        <item>27106</item>
        <item>27106,27094</item>
        <item>27115</item>
        <item>27091</item>
        <item>27094</item>
        <item>27103</item>
        <item>27103,27106</item>
        <item>27103,27094</item>
        <item>27103,27094,27106</item>
        <item>27097</item>
        <item>27100</item>
        <item>27109</item>
        <item>27112</item>
        <item>27088</item>
    </string-array>
    <string-array name="district_Quan3_townId_arrays">
        <item>27160</item>
        <item>27157</item>
        <item>27154</item>
        <item>27148</item>
        <item>27151</item>
        <item>27139</item>
        <item>27124</item>
        <item>27121</item>
        <item>27142</item>
        <item>27145</item>
        <item>27133</item>
        <item>27130</item>
        <item>27136</item>
        <item>27127</item>
    </string-array>
    <string-array name="district_Quan4_townId_arrays">
        <item>27298</item>
        <item>27292</item>
        <item>27286</item>
        <item>27283</item>
        <item>27274</item>
        <item>27265</item>
        <item>27268</item>
        <item>27262</item>
        <item>27271</item>
        <item>27256</item>
        <item>27259</item>
        <item>27280</item>
        <item>27295</item>
        <item>27289</item>
        <item>27277</item>
    </string-array>
    <string-array name="district_Quan5_townId_arrays">
        <item>27325</item>
        <item>27313</item>
        <item>27307</item>
        <item>27301</item>
        <item>27334</item>
        <item>27337</item>
        <item>27322</item>
        <item>27316</item>
        <item>27304</item>
        <item>27340</item>
        <item>27328</item>
        <item>27310</item>
        <item>27343</item>
        <item>27331</item>
        <item>27319</item>
    </string-array>
    <string-array name="district_Quan6_townId_arrays">
        <item>27370</item>
        <item>27367</item>
        <item>27379</item>
        <item>27373</item>
        <item>27361</item>
        <item>27355</item>
        <item>27382</item>
        <item>27376</item>
        <item>27352</item>
        <item>27385</item>
        <item>27364</item>
        <item>27358</item>
        <item>27349</item>
        <item>27346</item>
    </string-array>
    <string-array name="district_Quan7_townId_arrays">
        <item>27478</item>
        <item>27493</item>
        <item>27484</item>
        <item>27475</item>
        <item>27472</item>
        <item>27490</item>
        <item>27487</item>
        <item>27481</item>
        <item>27466</item>
        <item>27469</item>
    </string-array>
    <string-array name="district_Quan8_townId_arrays">
        <item>27394</item>
        <item>27391</item>
        <item>27397</item>
        <item>27409</item>
        <item>27418</item>
        <item>27424</item>
        <item>27433</item>
        <item>27388</item>
        <item>27403</item>
        <item>27406</item>
        <item>27400</item>
        <item>27415</item>
        <item>27412</item>
        <item>27421</item>
        <item>27427</item>
        <item>27430</item>
    </string-array>
    <string-array name="district_Quan9_townId_arrays">
        <item>26839</item>
        <item>26830</item>
        <item>26857</item>
        <item>26833</item>
        <item>26860</item>
        <item>26866</item>
        <item>26863</item>
        <item>26851</item>
        <item>26848</item>
        <item>26842</item>
        <item>26845</item>
        <item>26836</item>
        <item>26854</item>
    </string-array>
    <string-array name="district_Quan10_townId_arrays">
        <item>27184</item>
        <item>27190</item>
        <item>27205</item>
        <item>27193</item>
        <item>27199</item>
        <item>27202</item>
        <item>27196</item>
        <item>27187</item>
        <item>27181</item>
        <item>27178</item>
        <item>27175</item>
        <item>27172</item>
        <item>27166</item>
        <item>27169</item>
        <item>27163</item>
    </string-array>
    <string-array name="district_Quan11_townId_arrays">
        <item>27247</item>
        <item>27250</item>
        <item>27220</item>
        <item>27244</item>
        <item>27211</item>
        <item>27241</item>
        <item>27238</item>
        <item>27229</item>
        <item>27232</item>
        <item>27223</item>
        <item>27217</item>
        <item>27235</item>
        <item>27226</item>
        <item>27214</item>
        <item>27208</item>
        <item>27253</item>
    </string-array>
    <string-array name="district_Quan12_townId_arrays">
        <item>26779</item>
        <item>26788</item>
        <item>26770</item>
        <item>26776</item>
        <item>26787</item>
        <item>26782</item>
        <item>26791</item>
        <item>26767</item>
        <item>26764</item>
        <item>26773</item>
        <item>26785</item>
    </string-array>
    <string-array name="district_QuanBinhTan_townId_arrays">
        <item>27460</item>
        <item>27463</item>
        <item>27436</item>
        <item>27439</item>
        <item>27442</item>
        <item>27445</item>
        <item>27448</item>
        <item>27451</item>
        <item>27454</item>
        <item>27457</item>
    </string-array>
    <string-array name="district_QuanBinhThanh_townId_arrays">
        <item>26944</item>
        <item>26941</item>
        <item>26947</item>
        <item>26923</item>
        <item>26932</item>
        <item>26926</item>
        <item>26908</item>
        <item>26917</item>
        <item>26905</item>
        <item>26935</item>
        <item>26938</item>
        <item>26950</item>
        <item>26959</item>
        <item>26953</item>
        <item>26956</item>
        <item>26929</item>
        <item>26920</item>
        <item>26914</item>
        <item>26911</item>
        <item>26962</item>
    </string-array>
    <string-array name="district_QuanGoVap_townId_arrays">
        <item>26896</item>
        <item>26902</item>
        <item>26893</item>
        <item>26887</item>
        <item>26876</item>
        <item>26890</item>
        <item>26898</item>
        <item>26897</item>
        <item>26884</item>
        <item>26899</item>
        <item>26881</item>
        <item>26872</item>
        <item>26882</item>
        <item>26869</item>
        <item>26878</item>
        <item>26875</item>
    </string-array>
    <string-array name="district_QuanPhuNhuan_townId_arrays">
        <item>27058</item>
        <item>27061</item>
        <item>27055</item>
        <item>27043</item>
        <item>27046</item>
        <item>27052</item>
        <item>27064</item>
        <item>27049</item>
        <item>27070</item>
        <item>27073</item>
        <item>27082</item>
        <item>27085</item>
        <item>27079</item>
        <item>27067</item>
        <item>27076</item>
    </string-array>
    <string-array name="district_QuanTanBinh_townId_arrays">
        <item>26977</item>
        <item>26965</item>
        <item>26980</item>
        <item>26968</item>
        <item>26989</item>
        <item>26995</item>
        <item>26986</item>
        <item>26998</item>
        <item>27001</item>
        <item>26992</item>
        <item>26983</item>
        <item>26971</item>
        <item>26974</item>
        <item>27004</item>
        <item>27007</item>
    </string-array>
    <string name="nhap_lai">Nhập lại</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="lua_chon">Lựa chọn</string>
    <string name="ph_ng_x">Phường/Xã</string>
    <string name="so_thuaa">Số thửa đất</string>
    <string name="so_too">Số tờ bản đồ</string>
    <string name="text_cancel">Đóng</string>
    <string name="title_bd_so">Thông tin thửa đất</string>
    <string name="txt_hssdd">Hệ số SDĐ</string>
    <string name="txt_tinhthanh">Tỉnh/Thành</string>
    <string name="txt_quanhuyen">Quận/Huyện</string>
    <string name="txt_phuongxa">Phường/Xã</string>
    <string name="txt_dientich">Diện tích</string>
    <string name="txt_khuvuc">Quận/Huyện</string>
    <string name="txt_ma_lo_dat">Mã lô đất</string>
    <string name="vd_1_2">VD: 1-2</string>
    <string name="edt_so_to">Nhập số tờ</string>
    <string name="edt_so_thua">Nhập số thửa</string>
    <string name="txt_mdxd_1">Mật độ xây dựng (%)</string>
    <string name="txt_tang_cao">Tầng cao</string>
    <string name="txt_danso">Dân số</string>
    <string name="txt_share_link">Tạo liên kết để chia sẻ</string>
    <string name="txt_createPost">Tạo bài đăng</string>
</resources>