<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5EFEFF4"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:background="#ffffff"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/txt_khuvuc"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtChooseDistrict"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/lua_chon"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/formPhuongXa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:background="#ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/ph_ng_x"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />
                <TextView
                    android:id="@+id/txtChooseWard"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/lua_chon"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/formSoThua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:weightSum="3"
                android:background="#ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/so_thuaa"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />
                <EditText
                    android:id="@+id/edtSoThua"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:gravity="center|bottom"
                    android:hint="@string/edt_so_thua"
                    android:inputType="number"
                    android:paddingEnd="40dp"
                    android:paddingRight="40dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/formSoTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:weightSum="3"
                android:background="#ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/so_too"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/edtSoTo"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:gravity="center|bottom"
                    android:hint="@string/edt_so_to"
                    android:inputType="number"
                    android:paddingEnd="40dp"
                    android:paddingRight="40dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/formMaOPho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/txt_ma_lo_dat"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/edtMaLoDat"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:gravity="center|bottom"
                    android:hint="@string/vd_1_2"
                    android:paddingEnd="40dp"
                    android:paddingRight="40dp"
                    android:textSize="18sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/txtRewrite"
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nhap_lai"
                    android:background="#FFFFFF"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#007AFF"
                    android:layout_marginLeft="17dp"
                    android:textSize="19dp"/>

                <TextView
                    android:id="@+id/txtSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tim_kiem"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF"
                    android:background="#007AFF"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:textSize="19dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
