<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_download"
    >

    <LinearLayout
        android:id="@+id/ll_download_ttc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="#007AFF"
        android:padding="10dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btnShareLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/new_bg_land_info"
            android:text="@string/txt_share_link"
            android:textAllCaps="false"
            android:textColor="#007AFF"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnCreatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_createPost"
            android:textColor="#007AFF"
            android:textSize="18dp"
            android:background="@drawable/new_bg_land_info"
            android:padding="0dp"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp">
        <Button
            android:id="@+id/btn_cancel_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:textColor="#007AFF"
            android:background="@drawable/new_bg_land_info"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
